# haskell-discord-bot

./: CHANGELOG.md  README.md  haskell-discord-bot.cabal
app/: Main.hs
