cabal-version:      2.4
name:               haskell-discord-bot
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A simple discord bot that uses calamity as a base

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             n1ko23
maintainer:         niko.huuskonen.00@gmail.com

-- A copyright notice.
copyright: MIT
-- category:
extra-source-files: CHANGELOG.md

executable haskell-discord-bot
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        , base ^>=4.14.3.0
        , calamity
        , polysemy
        , polysemy-plugin
        , text
        , optics
        , di-polysemy
        , di
        , df1
        , di-core
        , pretty-simple
        , data-default-class
        , text-show
        , load-env
    ghc-options:      -fplugin=Polysemy.Plugin -funbox-strict-fields -Wall -fno-warn-name-shadowing
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        DataKinds
        OverloadedLabels
        OverloadedStrings
        TypeApplications